--- a/TODO
+++ b/TODO
@@ -2,6 +2,8 @@
 
 	************** TODO list for FIDOGATE development **************
 
+	* ftnmail: new setuid frontend for rfc2ftn to fix security
+
 	* Update documentation.
 
 DONE	* ftnpack: movedir packing option.
