--- a/TODO
+++ b/TODO
@@ -2,6 +2,15 @@
 
 	************** TODO list for FIDOGATE development **************
 
+	* rfc2ftn: directly process batch file in
+	  /var/spool/news/out.going.
+
+DONE	* rfc2ftn: check areas.bbs in news mode, only gate if area has
+	  downlinks.
+
+	* ftnin: process address by address, don't try to create bsy
+	  files for all addresses at once.
+
 	* ftnpack: allow %X in programs (pack, prog, progn)
 
 	* ftnafpkt: automatically recognize Areafix/Filefix as name_to
